cmake_minimum_required(VERSION 3.11)
project(Hanabi)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g -O0 -D DEBUG -Wall")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2 -D NDEBUG -Wall")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g -O2 -D DEBUG -Wall")
set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_RELEASE} -O3 -D NDEBUG -Wall")
link_directories(${CMAKE_CURRENT_LIST_DIR}/ ${CMAKE_CURRENT_LIST_DIR}/../build/lib/)
add_library(Injector SHARED ${CMAKE_CURRENT_LIST_DIR}/Loader.cpp)
target_include_directories(Injector PUBLIC ${CMAKE_CURRENT_LIST_DIR}/ ${CMAKE_CURRENT_LIST_DIR}/../LLVM/include/ ${CMAKE_CURRENT_LIST_DIR}/../build/include/)
target_link_libraries(Injector libsubstitute.dylib libLLVMCore.a libLLVMObfuscation.a libLLVMSupport.a libLLVMTransformUtils.a)
set (CMAKE_SHARED_LINKER_FLAGS "-undefined dynamic_lookup")
